--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,91 +1,106 @@
 name: display_users
 description: A new Flutter project.
 
-# The following line prevents the package from being accidentally published to
-# pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number is used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-# In Windows, build-name is used as the major, minor, and patch parts
-# of the product and file versions while build-number is used as the build suffix.
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.18.2 <3.0.0'
+  sdk: ">=2.18.1 <3.0.0"
 
-# Dependencies specify other packages that your package needs in order to work.
-# To automatically upgrade your package dependencies to the latest versions
-# consider running `flutter pub upgrade --major-versions`. Alternatively,
-# dependencies can be manually updated by changing the version numbers below to
-# the latest version available on pub.dev. To see which dependencies have newer
-# versions available, run `flutter pub outdated`.
+flutter_icons:
+  ios: true
+  android: true
+  windows: true
+  image_path: "assets/cbj_icon.png"
+  adaptive_icon_background: "#FFFFFF"
+  adaptive_icon_foreground: "assets/cbj_icon_adaptive.png"
+
+flutter:
+  # Ensures that the Material Icons font is included with your application.
+  uses-material-design: true
+  assets:
+    - assets/
+    - assets/translations/
+
+  fonts:
+    - family: gidole_regular
+      fonts:
+        - asset: assets/gidole_regular.ttf
+
 dependencies:
-  flutter:
-    sdk: flutter
-
-
+  # Collection of some cool and awesome text animations.
+  animated_text_kit: ^4.2.2
+  # Declarative routing solution, where everything needed for navigation is automatically generated for you.
+  auto_route: ^5.0.1
+  # Automatically resizes text to fit perfectly within its bounds.
+  auto_size_text: ^3.0.0
+  # Helps implement the BLoC pattern.
+  bloc: ^8.1.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.5
+  # Functional programming thingies, let you use multiple return types
+  # Functional programming thingipes, let you use multiple return types
+  dartz: ^0.10.1
+  # Internationalization (Easy translations)
+  easy_localization: ^3.0.1
+
+  flutter:
+    sdk: flutter
+  # Bloc for state management, replace StatefulWidget
+  flutter_bloc: ^8.1.1
+  # Toast Library for Flutter, Easily create toast messages in single line of code.
+  fluttertoast: ^8.0.9
+  # Font Awesome Icon pack available as Flutter Icons.
+  font_awesome_flutter: ^10.2.1
+  # Annotations for freezed
+  freezed_annotation: ^2.1.0
+  # Service locator
+  get_it: ^7.2.0
+  # Add hex color codes to your flutter projects
+  hexcolor: ^3.0.1
+  # A composable, multi-platform, Future-based API for HTTP requests.
+  http: ^0.13.5
+  # Convenient code generator for get_it
+  injectable: ^1.5.3
+  # Allow you to have a screen at launcher for example
+  introduction_screen: ^3.0.2
+  # Defines the annotations used by json_serializable to create code for JSON serialization and deserialization.
+  json_annotation: ^4.7.0
+  # Dart Build System builders for handling JSON.
+  json_serializable: ^6.5.1
+  # Port of Kotlin's Kotlin Standard library for Dart/Flutter projects
+  kt_dart: ^1.0.0
+  # Small, easy to use and extensible logger which prints beautiful logs.
+  logger: ^1.1.0
+  # The Material Design Icons designed by the community for Flutter
+  material_design_icons_flutter: ^5.0.6996
+  # Popup that ask for the requested permission
+  permission_handler: ^10.1.0
+  # A wrapper around InheritedWidget to make them easier to use and more reusable.
+  provider: ^6.0.4
+  # Implementation of the popular reactiveX api for asynchronous programming
+  rxdart: ^0.27.5
+  # Plugin for launching a URL
+  url_launcher: ^6.1.6
+  # Simple, fast generation of RFC4122 UUIDs.
+  uuid: ^3.0.6
+
 
 dev_dependencies:
+  # Generator for auto_route library.
+  auto_route_generator: ^5.0.2
+  # A build system for Dart code generation and modular compilation.
+  build_runner:
+
+  # Package which simplifies the task of updating your Flutter app's launcher icon.
+  flutter_launcher_icons: ^0.10.0
   flutter_test:
     sdk: flutter
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
-  flutter_lints: ^2.0.0
-
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter packages.
-flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
-  uses-material-design: true
-
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
+  # Code generator for unions/pattern-matching/copy.
+  freezed: ^2.1.0+1
+  # Convenient code generator for get_it.
+  injectable_generator: ^1.5.4
+  # Collection of lint rules for Dart and Flutter projects.
+  lint: ^1.10.0
+  # Mock framework with APIs for Fakes, Mocks, behavior verification, and stubbing.
+  mockito: ^5.0.12
