--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,9 +10,9 @@ flutter_icons:
   ios: true
   android: true
   windows: true
-  image_path: "assets/cbj_icon.png"
+  image_path: "assets/users_icon.png"
   adaptive_icon_background: "#FFFFFF"
-  adaptive_icon_foreground: "assets/cbj_icon_adaptive.png"
+  adaptive_icon_foreground: "assets/users_icon_adaptive.png"
 
 flutter:
   # Ensures that the Material Icons font is included with your application.
